# P2P-Insole-Realtime_experiment2

./: README.md  kinematic_model.py  pyproject.toml  realtime.py  tmp_check_data.py  tmp_test_hierarchical.py  train.py  visualizer.py
data/rawData/: convert_csv.py
dataset/: insole_dataset.py
models/: encoder.py  model.py
processor/: preprocessor.py
